<resources>
    <string name="app_name">Estagios</string>
    <string name="logo_da_ese">Logo da ESE</string>
    <string name="logo_da_esa">Logo da ESA</string>
    <string name="logo_da_estg">Logo da ESTG</string>
    <string name="logo_da_ess">Logo da ESS</string>
    <string name="logo_da_esce">Logo da ESCE</string>
    <string name="logo_da_esdl">Logo da ESDL</string>
    <string name="logo_ipvc" />
    <string name="escolha_uma_escola">Escolha uma Escola</string>
    <string name="nome_do_curso">Nome do Curso</string>
    <string name="nome_da_empresa">Nome da Empresa</string>
    <string name="local_da_empresa">Local da Empresa</string>
</resources>